# backend/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router } from 'express';
 import equipeRoutes from './equipeRoutes';
 import atletaRoutes from './atletaRoutes';
 import authRoutes from './authRoutes';
+import treinadorRoutes from './treinadorRoutes';
 
 const router = Router();
 
 router.use('/auth', authRoutes);
 router.use('/equipes', equipeRoutes);
 router.use('/atletas', atletaRoutes);
+router.use('/treinadores', treinadorRoutes);
 
 export default router;
